# term2.3-advanced-tools

./: .gitignore  CMakeLists.txt  advanced_tools.sublime-project  advanced_tools.sublime-workspace  main.cpp
full_results/ddr4/: full_results_i100_s10m.json  full_results_i10k_s10.json  full_results_i10k_s10k.json  full_results_i10k_s10m.json  full_results_i1k_s10k.json  full_results_i1k_s10m.json
full_results/ddr5_dual_channel/: full_results_i100_s10k.json  full_results_i100_s10m.json  full_results_i10k_s10.json  full_results_i10k_s10k.json  full_results_i10k_s10m.json  full_results_i1k_s10.json  full_results_i1k_s10k.json  full_results_i1k_s10m.json
full_results/ddr5_single_channel/: full_results_i100_s10.json  full_results_i100_s10k.json  full_results_i100_s10m.json  full_results_i10k_s10.json  full_results_i10k_s10k.json  full_results_i10k_s10m.json  full_results_i1k_s10.json  full_results_i1k_s10k.json  full_results_i1k_s10m.json
graph_plotter/: full_results.json  graph_plotter.py
memory_tester/: .gitignore  CMakeLists.txt  main.cpp  memory_tester.sublime-project  readme.md
memory_tester/src/: tester.cpp  tester.h
plugins/: Stopwatch.hpp
src/: LargeObject.cpp  LargeObject.hpp  SmallObject.cpp  SmallObject.hpp  Tester.cpp  Tester.hpp  TestingObject.hpp  operation_summary.h  tester.cpp  tester.h
src/plugins/: MemoryInfo.hpp  Stopwatch.hpp  cpuinfo.hpp
